--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ nav ul li a:hover {
     background-image: linear-gradient(#0005, #0005), url(images/bckgrdimg.jpg);
     background-size: cover;
     background-position: center;
+    font-family: 'Secular One', sans-serif
 }
 
 .back h1 {
