--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ html {
 
 /*-------- home screen --------*/
 
+.home {
+    font-family: 'Secular One', sans-serif
+}
+
+
 nav {
     position: fixed;
     top: 0;
@@ -64,7 +69,6 @@ nav ul li a:hover {
     background-image: linear-gradient(#0005, #0005), url(images/bckgrdimg.jpg);
     background-size: cover;
     background-position: center;
-    font-family: 'Secular One', sans-serif
 }
 
 .back h1 {
